fix: added overflow: hidden to .jumbo-slider class. now sites fits to screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
   width: 100%;
   height: 100vh;
   background: #1b1b1b;
+  overflow: hidden;
 }
 
 .jumbo-slider__container {
@@ -158,4 +159,11 @@
 
 .jumbo-slider__circle--filled {
   background: #03fc7f;
+}
+
+.jumbo-slider__timeline{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 4;
 }
